src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Primary_Spices_Owner_ID_match__c</fullName>
        <formula>IF(Owner_ID_Match__c ==  Account.Spice_Owner_Id__c , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Spices Owner ID match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PLBS_Product__r.Product_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Closing_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Closing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Briefing Evaluation</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Sampling</fullName>
                </value>
                <value>
                    <fullName>Offering</fullName>
                </value>
                <value>
                    <fullName>Customer Acceptance</fullName>
                </value>
                <value>
                    <fullName>Project Closing</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Match</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Application Development</fullName>
                    <isActive>false</isActive>
                    <label>Application Development</label>
                </value>
                <value>
                    <fullName>Co-development</fullName>
                    <isActive>false</isActive>
                    <label>Co-development</label>
                </value>
                <value>
                    <fullName>Ingredient Development</fullName>
                    <isActive>false</isActive>
                    <label>Ingredient Development</label>
                </value>
                <value>
                    <fullName>New Development</fullName>
                    <isActive>false</isActive>
                    <label>New Development</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Open_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Platform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFP Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ratio_of_Actual_vs_Budgeted_Hours__c</fullName>
        <formula>IF( Budgeted_Developing_Hours__c &lt;&gt; 0, Actual_Developing_Hours__c / Budgeted_Developing_Hours__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio of Actual vs Budgeted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ready_for_Approval__c</fullName>
        <formula>PD_I_Member_is_Added__c &amp;&amp;  NOT(ISBLANK(Estimated_Volume_MT__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Add a PD&amp;I Manager as an Opportunity Team member and fill in the Estimated Volume (MT) field.</inlineHelpText>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Won__c</fullName>
        <label>Reason Won</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Speed to Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_lost__c</fullName>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Speed to Market</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text (Account.Regions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Samples</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result_of_Presentation_Opty__c</fullName>
        <formula>NOT(ISBLANK(Present_Opportunity__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result of Presentation Opty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Accepted_Flag__c</fullName>
        <label>Sample Accepted Flag</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Sampling_Status__c</field>
            <operation>equals</operation>
            <value>Sample Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sample_Request_OSSM_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Request OSSM Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Sent_Flag__c</fullName>
        <description>Get the count of Sample sent from Opportunity Line Item</description>
        <label>Sample Sent Flag</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Sampling_Status__c</field>
            <operation>equals</operation>
            <value>Samples Sent</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DAIRY</fullName>
                </value>
                <value>
                    <fullName>DAIRY ALTERNATIVES</fullName>
                </value>
                <value>
                    <fullName>FROZEN DAIRY</fullName>
                </value>
                <value>
                    <fullName>FILLINGS (WB)</fullName>
                </value>
                <value>
                    <fullName>SYRUPS (WB)</fullName>
                </value>
                <value>
                    <fullName>BEVERAGES</fullName>
                </value>
                <value>
                    <fullName>CHOCOLATE (LIKE)</fullName>
                </value>
                <value>
                    <fullName>CONFECTIONERY MIXES</fullName>
                </value>
                <value>
                    <fullName>FILLINGS (FB)</fullName>
                </value>
                <value>
                    <fullName>SPREADS (FB)</fullName>
                </value>
                <value>
                    <fullName>SYRUPS (FB)</fullName>
                </value>
                <value>
                    <fullName>DECORATION</fullName>
                </value>
                <value>
                    <fullName>DAIRY MIXES</fullName>
                </value>
                <value>
                    <fullName>INSTANT MIXES</fullName>
                </value>
                <value>
                    <fullName>BAKERY MIXES</fullName>
                </value>
                <value>
                    <fullName>REPACKING</fullName>
                </value>
                <value>
                    <fullName>BAKERY</fullName>
                </value>
                <value>
                    <fullName>CEREALS</fullName>
                </value>
                <value>
                    <fullName>OTHER APPLICATIONS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment_Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Term</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Container_Type__c</fullName>
        <label>Shipped Container Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20&apos;DC Dry</fullName>
                </value>
                <value>
                    <fullName>40&apos;DC Dry</fullName>
                </value>
                <value>
                    <fullName>40&apos;HC Dry</fullName>
                </value>
                <value>
                    <fullName>20&apos;RF Reefer</fullName>
                </value>
                <value>
                    <fullName>40&apos;RF Reefer</fullName>
                </value>
                <value>
                    <fullName>40&apos;HC Reefer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Party_SAP_ID__c</fullName>
        <formula>Account.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Party SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <formula>TEXT( PLBS_Product__r.Sub_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chocolate milk</fullName>
                </value>
                <value>
                    <fullName>Milk shake</fullName>
                </value>
                <value>
                    <fullName>Pudding</fullName>
                </value>
                <value>
                    <fullName>Custard</fullName>
                </value>
                <value>
                    <fullName>Mousse</fullName>
                </value>
                <value>
                    <fullName>Yoghurt</fullName>
                </value>
                <value>
                    <fullName>Chocolate cream</fullName>
                </value>
                <value>
                    <fullName>Cream Cheese</fullName>
                </value>
                <value>
                    <fullName>Remaining wet dairy products</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Desserts</fullName>
                </value>
                <value>
                    <fullName>Ice Cream</fullName>
                </value>
                <value>
                    <fullName>Yogurts</fullName>
                </value>
                <value>
                    <fullName>Other dairy alternatives</fullName>
                </value>
                <value>
                    <fullName>Ice (Cream)</fullName>
                </value>
                <value>
                    <fullName>Frozen yoghurt</fullName>
                </value>
                <value>
                    <fullName>Other frozen dairy products</fullName>
                </value>
                <value>
                    <fullName>Marshmallow</fullName>
                </value>
                <value>
                    <fullName>Cream fillings (WB)</fullName>
                </value>
                <value>
                    <fullName>Hard candy fillings (WB)</fullName>
                </value>
                <value>
                    <fullName>Foam fillings</fullName>
                </value>
                <value>
                    <fullName>Fondant Fillings</fullName>
                </value>
                <value>
                    <fullName>Other WB fillings</fullName>
                </value>
                <value>
                    <fullName>Modifier for chocolate drinks (WB)</fullName>
                </value>
                <value>
                    <fullName>Toppings (WB)</fullName>
                </value>
                <value>
                    <fullName>Bread spreads (WB)</fullName>
                </value>
                <value>
                    <fullName>Frostings / Fudges (WB)</fullName>
                </value>
                <value>
                    <fullName>Cereal Coatings (WB)</fullName>
                </value>
                <value>
                    <fullName>Other WB syrups</fullName>
                </value>
                <value>
                    <fullName>Hot Coffee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Margin__c</fullName>
        <label>Target Margin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_RM_Price__c</fullName>
        <label>Target RM Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Selling_Price__c</fullName>
        <label>Target Selling Price (Per Unit)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tender_Contract_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tender Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tender_Contract_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tender Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tender_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tender Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Ingredient_Price_No_Processing__c</fullName>
        <label>Total Ingredient Price(No Processing)</label>
        <summarizedField>OpportunityLineItem.Total_Price_Olam__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Offer__c</fullName>
        <description>Provides the total sum of the olam offers from opportunity products</description>
        <inlineHelpText>Sum of total offer generated by each product</inlineHelpText>
        <label>Opportunity Value</label>
        <summarizedField>OpportunityLineItem.Total_Offer__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Awarded__c</fullName>
        <label>Unit Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Is_Account_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is by default unchecked, and will be updated by Flow when user tries to create a new Opportunity record</description>
        <label>User Is Account Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vietnam_Child_Opp_Currency__c</fullName>
        <formula>TEXT(Parent_Opportunity__r.Local_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>Roll up summary of the Volume of the Opportunity Products</description>
        <inlineHelpText>Total of product volume after product acceptance</inlineHelpText>
        <label>Opportunity Volume (MT)</label>
        <summarizedField>OpportunityLineItem.Converted_Volume_in_MT__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Winning_Offer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Winning Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Volume__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Defend_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Number_of_Samples_Sent__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Defend_Opportunity</value>
        </filters>
        <label>Defend Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Develop_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Number_of_Samples_Sent__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Develop_Opportunity</value>
        </filters>
        <label>Develop Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Gain_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Number_of_Samples_Sent__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Gain_Opportunity</value>
        </filters>
        <label>Gain Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Kanban</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Kanban</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Volume__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PDI_Lead__c</columns>
        <columns>PDI_Member__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PD_I_Opportunity_View</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Development</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Defend_Opportunity,Opportunity.Develop_Opportunity</value>
        </filters>
        <label>PD&amp;I Opportunity View</label>
        <sharedTo>
            <role>Cocoa_Head_PD_I_APAC</role>
            <role>Cocoa_PD_I_APAC</role>
            <role>Cocoa_PD_I_Global_Head</role>
            <role>Cocoa_PD_I_Indonesia</role>
            <role>Dairy_PD_I_Global_Head</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sampling_Due_for_this_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>First_Sample_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Sample_Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Sampling Due for this Month</label>
    </listViews>
    <listViews>
        <fullName>Service_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Number_of_Samples_Sent__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Service</value>
        </filters>
        <label>Service Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Defend_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Defend</businessProcess>
        <description>Defend existing Olam business that may be at threat due to quality, product functionality, or price. Involves upgrading our product offering by Sampling a different SKU, Matching competitor offers, Developing new SKU</description>
        <label>Defend Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Develop_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Develop</businessProcess>
        <description>To Develop new business with the customer. This may involve either Sampling an existing Portfolio SKU, Matching an existing grade used by the customer, Developing a new product for the customer or Partnering with the customer to develop a new Product</description>
        <label>Develop Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gain_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Gain</businessProcess>
        <description>Commercial Sale Opportunity</description>
        <label>Gain Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>PLBS_Tendering_Opportunity</fullName>
        <active>true</active>
        <businessProcess>PLBS Tender</businessProcess>
        <description>Opportunity to capture PLBS Tendering Details</description>
        <label>PLBS Tendering Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>PLBS_Tendering_Product</fullName>
        <active>true</active>
        <businessProcess>PLBS Tender Product</businessProcess>
        <description>Opportunity to capture PLBS Tendering Product Details</description>
        <label>PLBS Tendering Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Present</fullName>
        <active>true</active>
        <businessProcess>Service%2FPresent</businessProcess>
        <description>Opportunity to present new concepts or solutions to the customer that may lead to new business</description>
        <label>Presentation Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <businessProcess>Service%2FPresent</businessProcess>
        <description>Request from customer for documents, logistics issues, other ad hoc requests. Does not have any commercial impact</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tendering_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Tendering Opportunity</businessProcess>
        <description>Capture and track tender projects</description>
        <label>Tendering Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACNT002_Cannot_Create_if_Acct_Inactive</fullName>
        <active>true</active>
        <errorConditionFormula>isnew() &amp;&amp;  (
ISPICKVAL(Account.Dairy_BD_Status__c , &quot;Inactive&quot;) || 
ISPICKVAL(Account.Cocoa_BD_Status__c , &quot;Inactive&quot;) || 
ISPICKVAL(Account.Spice_BD_Status__c , &quot;Inactive&quot;) || 
ISPICKVAL(Account.Edible_Nuts_BD_Status__c , &quot;Inactive&quot;))</errorConditionFormula>
        <errorMessage>New Opportunities cannot be created if the Account is inactive. Please reactivate the Account through the MDM first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bid_Close_and_Bid_Open</fullName>
        <active>true</active>
        <errorConditionFormula>IF(($Profile.Name = &apos;Vietnam PKG&apos; || $Profile.Name = &apos;Vietnam PLBS&apos; || $Profile.Name = &apos;Vietnam R&amp;D&apos;),  IF(Bid_Open__c &gt;   Bid_Close__c , true, false) , false)</errorConditionFormula>
        <errorMessage>You must enter Bid Close &gt;= Bid Open</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Block_access_to_Edit_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(PriorValue(StageName), &quot;Closing Won&quot;) ||
ISPICKVAL(PriorValue(StageName), &quot;Closed&quot;) ||
ISPICKVAL(PriorValue(StageName), &quot;Closed Lost&quot;) ||
ISPICKVAL(PriorValue(StageName), &quot;Closed Cancel&quot;)) &amp;&amp; NOT( $Permission.Olam_Validation_Exception) &amp;&amp; NOT( $Permission.Vietnam_Custom_Exception ) &amp;&amp; NOT( ISCHANGED( Project_Status__c ) &amp;&amp; IsClosed )</errorConditionFormula>
        <errorMessage>You can&apos;t edit a previously closed or cancelled opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Delete_Opportunity_Product</fullName>
        <active>false</active>
        <errorConditionFormula>priorvalue( Number_of_Products__c ) &gt; Number_of_Products__c &amp;&amp; not( $Permission.Olam_Validation_Exception )</errorConditionFormula>
        <errorMessage>Cannot delete Opportunity Product</errorMessage>
    </validationRules>
</CustomObject>